# hpc-app

./: .gitignore  README.md  app.py  auth_middleware.py  firecrest_sdk.py  hydra.json  models.py  mp-demo.ipynb  openapi-broker.yml  openapi-new.yml  openapi.yml  requirements.txt  rpc_server.py  run_demo.sh  setup.cfg  validate.py
sample_files/: colloid.in  submit.sh
templates/: index.html
