[metadata]
name = hpc-gateway-app
version = v0.2.0
description = Materials MarketPlace HPC gateway app.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/unkcpz/hpc-app
author = Jusong Yu
author_email = jusong.yu@epfl.ch
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    marketplace-sdk~=0.2.0
    python-dotenv~=0.19.2
    Flask~=2.0.1
    Flask-PyMongo~=2.3.0
    pyfirecrest~=1.2.0
python_requires = >=3.8
include_package_data = True

[options.extras_require]
dev =
    bumpver==2021.1114
    dunamai==1.7.0
pre_commit =
    pre-commit==2.15.0
tests =
    pytest==6.2.5

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.

[bumpver]
current_version = "v0.2.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
hpc_gateway/version.py =
    __version__ = "{version}"
setup.cfg =
    current_version = "{version}"
    version = {version}